# type-open-syntax-demo

./: CHANGELOG.md  demo.cabal
src/: Demo.hs
