cabal-version:          2.4
name:                   demo
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:                ISC
license-file:           LICENSE
author:                 Eric Mertens
maintainer:             emertens@gmail.com
copyright:              2019 (c) Eric Mertens
extra-source-files:     CHANGELOG.md

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:
    Demo

  build-depends:
    base                ^>=4.12.0.0,
    parameterized-utils >=2.0 && <4,

